// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render as anonymous 1`] = `
<div>
  <button>
    Login
  </button>
</div>
`;

exports[`should render as authenticated 1`] = `
<div>
  <button>
    Logout
  </button>
</div>
`;
